--- a/mooc/os-prof-bahn/4.os-process-management.md
+++ b/mooc/os-prof-bahn/4.os-process-management.md
@@ -136,7 +136,6 @@ fork()를 이용해 자식 프로세스 생성하는 예
     
 - exec() 를 통해 비로소 부모와 다른 독자적이 프로그램 수행할 수 있게 한다
     1. exec() 시스템콜을 통해 주소공간을 새로운 프로그램으로 덮어씌어진다.
-
     
 ```
 wait()는 자식 프로세스가 종료될때를 부모가 기다린다(봉쇄상태로)
@@ -163,6 +162,26 @@ OS는 프로세스간 협력 매커니즘(Inter-Process Communication)을 제공
     - 논리적으로 다른 주소공간으로 구현되지만, 물리적메모리 매핑할때 동일 물리주소로 매핑되는것이다.
 
 
+####Thread
+Thread : lightweight process
+<br/>
+동일한 일을 수행하는 다중 스레드가 협력하여 높은 처리율(throughout) 낸다.
+
+- Benefit Of Thread
+    1. Responsibility
+        - 웹 네트워킹중 화면 display
+    2. Resource Sharing
+    3. Economy
+        - 프로세스가 creating, CPU switching 시  30배, 5개 더 overhead
+    4. Utilization of MP Architecture
+
+
+- Implementation Of Threads
+    1. Kernel Threads : 쓰레드가 여러개 있음을 OS가 알고있다
+        - Kernel이 스케줄링
+        - Solaris, Unix, Windows 95/98
+    2. User Threads : library가 지원, OS는 쓰레드 존재 모른다.
+        - POSIX Pthreads, Solaris threads
     
     
         
